# jsweb

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  JSWEB_OPENAPI_GUIDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test_new_features.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  discord_pr_notifier.yml  discord_release_notifier.yml  python-publish.yml
JSWEB_OPENAPI_GUIDE/: index.html
Tests/: test_csrf_json.py  test_framework_comparison.py  test_optimized_routing.py  test_routing_comparison.py  test_routing_optimized.py  test_routing_scale.py
Tests/test1/: app.py  auth.py  config.py  forms.py  models.py  views.py
Tests/test1/migrations/versions/: c03fda6adfda_create_table_users.py
Tests/test1/templates/: welcome.html
admin/: index.html
blueprints/: index.html
cli/: index.html
configuration/: index.html
database/: index.html
docs/: JSWEB_OPENAPI_GUIDE.md  admin.md  blueprints.md  cli.md  configuration.md  database.md  dto-models.md  forms.md  getting-started.md  index.md  response-types.md  routing.md  templating.md
example/: app.py
example/templates/: welcome.html
examples/: app.py  example_api.py
examples/templates/: welcome.html
forms/: index.html
getting-started/: index.html
jsweb/: __init__.py  admin.py  app.py  blueprints.py  cli.py  forms.py  middleware.py  request.py  response.py  routing.py  server.py  validators.py
jsweb/admin_static/: admin.css
jsweb/admin_templates/: base.html  form.html  form_partial.html  list.html
jsweb/dto/: core.py
jsweb/templates/: starter_template.html
overrides/: main.html
overrides/stylesheets/: extra.css
project-structure/: index.html
routing/: index.html
sample-app/: forms.py  views.py
sample-app/templates/: upload.html
search/: search_index.json
stylesheets/: extra.css
templating/: index.html
