[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsweb"
version = "1.1.0"
description = "JsWeb - A lightweight and modern Python web framework designed for speed and simplicity."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    { name = "Jones Peter", email = "jonespetersoftware@gmail.com" }
]

keywords = [
    "JsWeb", "Framework", "Web", "Python", "WSGI", "Web Server", "ORM",
    "Database", "Routing", "Authentication", "Forms", "CLI"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
    "jinja2",
    "sqlalchemy",
    "werkzeug",
    "itsdangerous",
    "alembic"
]

[project.optional-dependencies]
dev = ["watchdog", "websockets"]
qr = ["qrcode[pil]"]
postgresql = ["psycopg2-binary"]

[project.scripts]
jsweb = "jsweb.cli:cli"

[project.urls]
Documentation = "https://jsweb-framework.site/"
Homepage = "https://github.com/Jones-peter/jsweb"
"Bug Tracker" = "https://github.com/Jones-peter/jsweb/issues"

[tool.setuptools]
include-package-data = true


# MANIFEST.in
[tool.setuptools.package-data]
jsweb = [
    "templates/*.html",
    "static/*.css",
    "static/*.png",
    "project_templates/*.jinja"
]
