[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsweb"
version = "1.2.0b1"
description = "JsWeb - A lightweight and modern Python web framework designed for speed and simplicity."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Jones Peter", email = "jonespetersoftware@gmail.com" }
]

keywords = [
    "JsWeb", "Framework", "Web", "Python", "ASGI", "Web Server", "ORM",
    "Database", "Routing", "Authentication", "Forms", "CLI", "Admin"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
    "jinja2",
    "sqlalchemy",
    "werkzeug",
    "itsdangerous",
    "alembic",
    "markupsafe",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["watchdog", "websockets"]
qr = ["qrcode[pil]"]
postgresql = ["psycopg2-binary"]

[project.scripts]
jsweb = "jsweb.cli:cli"

[project.urls]
Documentation = "https://jsweb-framework.site/"
Homepage = "https://github.com/Jones-peter/jsweb"
"Bug Tracker" = "https://github.com/Jones-peter/jsweb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jsweb*"]

[tool.setuptools.package-data]
jsweb = [
    # Core framework files
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    
    # Project generation templates
    "project_templates/*.jinja",
    "project_templates/alembic/*",

    # --- UPDATED FOR ADMIN SUB-PACKAGE ---
    # Include all templates and static files from within the new 'admin' package
    "admin/templates/*.html",
    "admin/static/*"
]
